// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodePushStatus renders renders 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 10,
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingHorizontal": 7.5,
      "paddingVertical": 5,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        Object {
          "color": "#4caf50",
          "fontSize": 20,
          "marginRight": 7.5,
        },
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <Text
    style={
      Object {
        "color": "#212121",
        "flex": 1,
        "fontFamily": "System",
        "fontSize": 15,
        "textAlign": "center",
      }
    }
  >
    Up to date
  </Text>
</View>
`;

exports[`CodePushStatus renders renders the loading state 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 10,
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingHorizontal": 7.5,
      "paddingVertical": 5,
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
    style={
      Object {
        "marginRight": 7.5,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#212121",
        "flex": 1,
        "fontFamily": "System",
        "fontSize": 15,
        "textAlign": "center",
      }
    }
  >
    Up to date
  </Text>
</View>
`;
